# seo-knowledge-insight

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  PLAN_API_SECURITY.md  PLAN_CACHE_REDIS.md  PLAN_EVAL_FIX.md  PLAN_MVP.md  PLAN_PHASE2_LEARNING_QUERY.md  PLAN_PIPELINE_MEMORY.md  PLAN_SEO_INSIGHT.md  PLAN_VERSION_REGISTRY_MULTILAYER.md  README.md  config.py  docker-compose.yml  plan.md  pyproject.toml  requirements.txt  requirements_api.txt  research.md
.claude/: CLAUDE.md
.githooks/: pre-commit
api/: .env.example  Dockerfile  README.md  package.json  pnpm-lock.yaml  tsup.config.ts  vitest.config.ts
app/: config.py  main.py
autoresearch/: .gitignore  baseline.json  baseline_report.json  eval_local.py  eval_report_local.py  experiment_log.md  program.md  program_report.md  runner.sh
commands/: meeting-prep.md
data/: off-page-authority.jsonl  seo-implementation-log.jsonl  seo-trends.jsonl  seo-validation-log.jsonl
docs/: FETCH_OPTIMIZATION_GUIDE.md  METADATA_OPS_GUIDE.md
docs-site/: index.html  style.css
eval/: eval_thresholds.json  golden_chat_maturity.json  golden_crawled_not_indexed.json  golden_dedup.json  golden_extraction.json  golden_maturity_classification.json  golden_meeting_prep.json  golden_qa.json  golden_report.json  golden_report_quality.json  golden_retrieval.json  golden_seo_analysis.json
evals/: __init__.py  eval_chat.py  eval_chat_maturity.py  eval_crawled_not_indexed.py  eval_dedup.py  eval_enrichment.py  eval_extraction.py  eval_maturity_classification.py  eval_meeting_prep_coherence.py  eval_retrieval.py  (+7 more)
(+1060 files in other folders)
