[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "seo-qa-pipeline"
version = "0.1.0"
description = "從 Notion SEO 顧問會議紀錄自動萃取結構化問答資料庫"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27.0",
    "openai>=1.30.0",
    "python-dotenv>=1.0.0",
    "numpy>=1.26.0",
    "tqdm>=4.66.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
seo-qa = "scripts.run_pipeline:main"

[tool.setuptools.packages.find]
include = ["utils*", "scripts*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
